front pages fixed, starting setup for sentence display.

--- a/pages/home.html
+++ b/pages/home.html
@@ -12,6 +12,11 @@
 					<span class=form-group>
 					<button class="btn btn-default" type="button">Search!</button>
 					</span>
+                    <br>
+                    <div>
+                        <p>first</p>
+                        <output>stuff</output>
+                    </div>
                 </span>
             </div>
         </div>
