--- a/pages/signup.html
+++ b/pages/signup.html
@@ -29,19 +29,13 @@
                     <input type="" name="" class="form-control" id="" value="">
                 </div>
 
-                <div class="col-sm-6">
-                    <input type="checkbox" class="checkbox"/>Sign up for our newsletter
-                </div>
 
-                <div class="col-sm-6">
-                    <input type="checkbox" class="checkbox"/>Send notifications to this email
-                </div>
             </div>
 
             <div class="col-md-6">
 
 
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" class="btn btn-primary" ng-click="signup()">Register</button>
             </div>
         </div>
     </section>
