--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,3 +1,4 @@
+<center>
 <div class="container-fluid">
     <section class="container">
         <div class="container-page">
@@ -29,7 +30,6 @@
                     <input type="" name="" class="form-control" id="" value="">
                 </div>
 
-
             </div>
 
             <div class="col-md-6">
@@ -37,6 +37,8 @@
 
                 <button type="submit" class="btn btn-primary" ng-click="signup()">Register</button>
             </div>
+
         </div>
     </section>
 </div>
+</center>
