--- a/index.html
+++ b/index.html
@@ -35,38 +35,28 @@
 <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed"
-                    data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                    aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span> <span
-                    class="icon-bar"></span> <span class="icon-bar"></span> <span
-                    class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Ling&#x262f;Zen</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <span ng-if="loggedin">{{user.username}} </span>
-            <form class="navbar-form navbar-right" role="form" ng-if="!loggedin">
-
-                <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control" ng-model="login.username">
-                </div>
-                <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control" ng-model="login.password">
-                </div>
-                <button type="submit" class="btn btn-success" ng-click="signin()">Sign in</button>
-                <a href="#/signup">
-                    <button type="submit" class="btn btn-primary">Sign up</button>
-                </a>
-
-            </form>
-
+<!--top nav bar-->
+<div class="header-bar">
+    <div class="logo-container">
+        <a class="navbar-brand" href="#">Ling&#x262f;Zen</a>
+    </div>
+    <div class="login-form-logout-container">
+        <form class="navbar-form navbar-right" role="form" ng-if="!loggedIn">
+            <div class="form-group">
+                <input type="text" placeholder="Email" class="form-control" ng-model="login.username">
+            </div>
+            <div class="form-group">
+                <input type="password" placeholder="Password" class="form-control" ng-model="login.password">
+            </div>
+            <button type="submit" class="btn btn-success" ng-click="signIn()">Sign in</button>
+        </form>
+        <div class="user-name-and-log-out-button-container">
+            <span class="users-name-in-top-nav-bar" ng-if="loggedIn">{{user.username}} </span>
+            <button class="btn btn-success" ng-click="logOut()" ng-if="loggedIn">Log out</button>
         </div>
     </div>
-</nav>
+</div>
+<!--en top nav bar-->
 <div ng-view=""></div>
 <!-- /container -->
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.js"><\/script>')</script>
@@ -89,6 +79,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-touch.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap-tpls.js"></script>
+<script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
 
 <script src="js/main.js"></script>
 
