--- a/pages/signup.html
+++ b/pages/signup.html
@@ -13,7 +13,7 @@
 
                 <div class="form-group col-lg-6">
                     <label>Password</label>
-                    <input type="password" name="" class="form-control" id="" value="">
+                    <input type="password" name="" class="form-control" id="" value="" ng-model="something.password">
                 </div>
 
                 <div class="form-group col-lg-6">
@@ -23,7 +23,7 @@
 
                 <div class="form-group col-lg-6">
                     <label>Email Address</label>
-                    <input type="" name="" class="form-control" id="" value="">
+                    <input type="" name="" class="form-control" id="" value="" ng-model="something.email">
                 </div>
 
                 <div class="form-group col-lg-6">
