--- a/index.html
+++ b/index.html
@@ -1,78 +1,30 @@
 <!doctype html>
-<!--[if lt IE 7]>
-<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>
-<html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>
-<html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!-->
 <html class="no-js" lang="">
-<!--<![endif]-->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title></title>
+    <title>LingoZen</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-csp.css">
-    <style>
-        body {
-            padding-top: 50px;
-            padding-bottom: 20px;
-        }
-    </style>
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://use.fontawesome.com/4ac1067326.js"></script>
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
-
 
 <body ng-app="lingoApp" ng-controller="mainController">
 <!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
-    your browser</a> to improve your experience.</p>
+<p class="browserupgrade">
+    You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your
+    browser</a> to improve your experience.
+</p>
 <![endif]-->
-<!--top nav bar-->
-<div class="header-bar">
-    <div class="logo-container">
-        <a class="navbar-brand" href="#/">Ling&#x262f;Zen</a>
-    </div>
-    <div class="login-form-logout-container">
-        <form class="navbar-form navbar-right" role="form" ng-if="!loggedIn">
-            <div class="form-group">
-                <input type="text" placeholder="Email" class="form-control" ng-model="login.username">
-            </div>
-            <div class="form-group">
-                <input type="password" placeholder="Password" class="form-control" ng-model="login.password">
-            </div>
-            <button type="submit" class="btn btn-success" ng-click="signIn()">Sign in</button>
-        </form>
-        <div class="user-name-and-log-out-button-container">
-            <a class="users-name-in-top-nav-bar" ng-if="loggedIn" ng-href="#/user-profile">{{user.username}} </a>
-            <button class="btn btn-success" ng-click="logOut()" ng-if="loggedIn">Log out</button>
-        </div>
-    </div>
-</div>
-<!--end top nav bar-->
 
+<div ng-include="'pages/header.html'"></div>
 <div ng-view=""></div>
-
-<!--footer-->
-<footer>
-    <p>&copy; LingoZen 2016</p>
-</footer>
-<!--end footer-->
+<div ng-include="'pages/footer.html'"></div>
 
 <!-- /container -->
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.js"><\/script>')</script>
-
-<script src="js/vendor/bootstrap.js"></script>
-<script src="https://code.jquery.com/jquery-3.1.1.js"
-        integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
-        crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.1.1.js">
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-resource.js"></script>
@@ -88,6 +40,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.2.0/ui-bootstrap-tpls.js"></script>
 <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.js"></script>
+<script src="https://use.fontawesome.com/4ac1067326.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
 <script src="js/main.js"></script>
 
