--- a/pages/signup.html
+++ b/pages/signup.html
@@ -3,7 +3,7 @@
     <center>
     <section class="container">
         <div class="container-page">
-            <div class="col-md-6">
+            <div class="">
                 <h3 class="dark-grey">Registration</h3>
 
                 <div class="form-group col-lg-12">
