--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <![endif]-->
 
 <div ng-include="'pages/header.html'"></div>
-<div ng-view=""></div>
+<div ng-view="" class="container-fluid app-container"></div>
 <div ng-include="'pages/footer.html'"></div>
 
 <!--libs-->
