--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,6 @@
 <div class="home-page">
-    <span class="welcome-message col-xs-12">Welcome to LingoZen!</span>
+    <span class="welcome-message col-xs-12">Welcome to LingoZen</span>
+    <span class="welcome-message-2 col-xs-12">All hope abandon ye who enter here</span>
 
 
     <div class="search-bar-button-container">
