started on add comments

--- a/pages/search-results.html
+++ b/pages/search-results.html
@@ -1,15 +1,21 @@
-<div ng-repeat="language in searchResultLanguages" class="search-results">
-    <div class="panel panel-info">
-        <div class="panel-heading">
+<uib-accordion close-others=false>
+    <div uib-accordion-group
+         class="panel-default search-results"
+         is-open="openTab"
+         ng-repeat="language in searchResultLanguages"
+         ng-init="openTab = true">
+        <uib-accordion-heading>
             <span class="language-in-search-result">{{language}}</span>
-        </div>
+            <i class="pull-right glyphicon"
+               ng-class="{'glyphicon-chevron-down': openTab, 'glyphicon-chevron-right': !openTab}"></i>
+        </uib-accordion-heading>
+        <a ng-href="#/sentences/{{sentence.id}}" ng-repeat="sentence in searchResultSentences[language]">
+            <div class="panel panel-info panel-body sentence-in-search-result">
+                <span class="col-xs-12 sentence-text">{{sentence.text}}</span>
+                <span class="col-xs-1"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>&nbsp;{{sentence.likes - sentence.dislikes}}</span>
+                <span class="col-xs-1"><i class="fa fa-language" aria-hidden="true"></i>&nbsp;3</span>
+                <span class="col-xs-1"><i class="fa fa-comment" aria-hidden="true"></i>&nbsp;8</span>
+            </div>
+        </a>
     </div>
-    <a ng-href="#/sentences/{{sentence.id}}" ng-repeat="sentence in searchResultSentences[language]">
-        <div class="panel panel-info panel-body sentence-in-search-result">
-            <span class="col-xs-12 sentence-text">{{sentence.text}}</span>
-            <span class="col-xs-1"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i>&nbsp;{{sentence.likes - sentence.dislikes}}</span>
-            <span class="col-xs-1"><i class="fa fa-language" aria-hidden="true"></i>&nbsp;3</span>
-            <span class="col-xs-1"><i class="fa fa-comment" aria-hidden="true"></i>&nbsp;8</span>
-        </div>
-    </a>
-</div>
+</uib-accordion>
