--- a/pages/sentence.html
+++ b/pages/sentence.html
@@ -3,12 +3,12 @@
         <div class="panel-body">
             <span class="col-xs-12"> {{sentence.text}}</span>
             <div class="sentence-actions col-lg-12">
-                <a class="sentence-action col-lg-2" ng-click="likeSentence()">Like</a>
-                <a class="sentence-action col-lg-2" ng-click="dislikeSentence()">Dislike</a>
+                <!--<a class="sentence-action col-lg-2" ng-click="likeSentence()">Like</a>-->
+                <!--<a class="sentence-action col-lg-2" ng-click="dislikeSentence()">Dislike</a>-->
                 <a class="sentence-action col-lg-2" ng-click="addTranslationToSentence()">Translate</a>
                 <a class="sentence-action col-lg-2" ng-click="addCommentToSentence()">Comment</a>
-                <a class="sentence-action col-lg-2" ng-click="addSentenceToDeck()">Add to Deck</a>
-                <a class="sentence-action col-lg-2" ng-click="flagSentence()">Flag</a>
+                <!--<a class="sentence-action col-lg-2" ng-click="addSentenceToDeck()">Add to Deck</a>-->
+                <!--<a class="sentence-action col-lg-2" ng-click="flagSentence()">Flag</a>-->
 
             </div>
         </div>
