--- a/pages/header.html
+++ b/pages/header.html
@@ -15,8 +15,9 @@
             <button type="submit" class="btn btn-success" ng-click="signIn()">Sign in</button>
         </form>
         <div class="user-name-and-log-out-button-container">
-            <a class="users-name-in-top-nav-bar" ng-if="loggedIn" ng-href="#/user-profile">{{user.username}} </a>
+            <a class="users-name-in-top-nav-bar" ng-if="loggedIn" ng-href="#/user-profile">{{user.username}}</a>
             <button class="btn btn-success log-out-button" ng-click="logOut()" ng-if="loggedIn">Log out</button>
         </div>
+        <div uib-alert ng-repeat="error in errors" class="alert-danger" close="removeError($index)">{{error}}</div>
     </div>
 </header>
