--- a/pages/modal-templates/add-comment-to-sentence.html
+++ b/pages/modal-templates/add-comment-to-sentence.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="modal-body" id="modal-body">
-    <input type="text" ng-model="comment.description"/>
+    <input style="width:100%" type="text" ng-model="comment.description"/>
 </div>
 
 <div class="modal-footer">
