--- a/pages/sentence.html
+++ b/pages/sentence.html
@@ -7,8 +7,8 @@
             Created by {{sentence.idUser}} on {{sentence.addedDate}}
         </div>
         <div class="original-sentence-actions-container">
-            <span>Like ({{sentence.likes}})</span>
-            <span>Dislikes ({{sentence.dislikes}})</span>
+            <span>Like ({{sentence.likes || 0}})</span>
+            <span>Dislikes ({{sentence.dislikes || 0}})</span>
             <span ng-click="addTranslationToSentence(sentence.id)">Translate ({{sentence.translations.length}})</span>
             <span ng-click="addCommentToSentence(sentence.id)">Comments({{sentence.comments.length}})</span>
         </div>
@@ -22,8 +22,8 @@
                     <span>{{comment.idUser}}</span>
                     <span>{{comment.description}}</span>
                     <div class="comment-actions">
-                        <span>Like ({{comment.likes}})</span>
-                        <span>Dislikes ({{comment.dislikes}})</span>
+                        <span>Like ({{comment.likes || 0}})</span>
+                        <span>Dislikes ({{comment.dislikes || 0}})</span>
                     </div>
                 </div>
             </div>
@@ -31,36 +31,34 @@
     </div>
     <div class="translation-sentences-container">
         <span class="translation-header">Translations</span>
-        <div class="panel panel-info">
-            <span class="col-xs-12" ng-if="!sentence.translations.length">No Translations found</span>
-            <div ng-repeat="translation in sentence.translations">
-                <div class="original-sentence-container">
-                    <span>{{translation.text}}</span>
-                </div>
-                <div class="created-by-user-container">
-                    Created by {{translation.idUser}} on {{translation.addedDate}}
-                </div>
-                <div class="original-sentence-actions-container">
-                    <span>Like ({{translation.likes}})</span>
-                    <span>Dislikes ({{translation.dislikes}})</span>
-                    <span ng-click="addCommentToSentence(translation.id)">Comments({{translation.comments.length}})</span>
-                </div>
-                <div class="comments-section">
-                    <div class="comment-container" ng-repeat="comment in translation.comments">
-                        <div class="comment-user-profile-picture">
-                            <div ng-include="'pages/profile-pic-img.html'" ng-if="searchResultLanguages.length"></div>
-                        </div>
-                        <div class="users-name-comment-and-action-container">
-                            <span>{{comment.idUser}}</span>
-                            <span>{{comment.description}}</span>
-                            <div class="comment-actions">
-                                <span>Like ({{comment.likes}})</span>
-                                <span>Dislikes ({{comment.dislikes}})</span>
-                            </div>
+        <span class="col-xs-12" ng-if="!sentence.translations.length">No Translations found</span>
+        <div ng-repeat="translation in sentence.translations" class="panel panel-infotranslation-card">
+            <div class="original-sentence-container">
+                <span>{{translation.text}}</span>
+            </div>
+            <div class="created-by-user-container">
+                Created by {{translation.idUser}} on {{translation.addedDate}}
+            </div>
+            <div class="original-sentence-actions-container">
+                <span>Like ({{translation.likes || 0}})</span>
+                <span>Dislikes ({{translation.dislikes || 0}})</span>
+                <span ng-click="addCommentToSentence(translation.id)">Comments({{translation.comments.length}})</span>
+            </div>
+            <div class="comments-section">
+                <div class="comment-container" ng-repeat="comment in translation.comments">
+                    <div class="comment-user-profile-picture">
+                        <div ng-include="'pages/profile-pic-img.html'" ng-if="searchResultLanguages.length"></div>
+                    </div>
+                    <div class="users-name-comment-and-action-container">
+                        <span>{{comment.idUser}}</span>
+                        <span>{{comment.description}}</span>
+                        <div class="comment-actions">
+                            <span>Like ({{comment.likes || 0}})</span>
+                            <span>Dislikes ({{comment.dislikes || 0}})</span>
                         </div>
                     </div>
-                    <span ng-if="!sentence.comments.length">There are no comments</span>
                 </div>
+                <span ng-if="!sentence.comments.length">There are no comments</span>
             </div>
         </div>
     </div>
