--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
 <!--app-->
-<script src="js/main.js"></script>
-<script src="js/services.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/routes.js"></script>
+<script src="js/main.js" inline></script>
+<script src="js/services.js" inline></script>
+<script src="js/controllers.js" inline></script>
+<script src="js/routes.js" inline></script>
 
 </body>
 </html>
