--- a/pages/home.html
+++ b/pages/home.html
@@ -6,6 +6,7 @@
     <div class="search-bar-button-container">
         <input ng-model="searchQuery.query" type="text" class="form-control"
                placeholder="Type here to start searching">
+        <button ng-click="addSentence()"> ADD </button>
     </div>
 
     <!-- searchResults-->
