--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -10,5 +10,5 @@
     </div>
 
     <!-- searchResults-->
-    <div ng-include="'pages/search-results.html'" ng-if="searchResultLanguages.length"></div>
+    <div ng-include="'search-results.html'" ng-if="searchResultLanguages.length"></div>
 </div>
